[gd_scene format=3 uid="uid://bubok1db34ysu"]

[ext_resource type="Script" uid="uid://2i0hddkuq4tj" path="res://Areais/Batalha/scripts/Batalha2D.gd" id="1_vsann"]
[ext_resource type="Script" uid="uid://cfeyaguf3e8fl" path="res://Areais/Batalha/scripts/BattleTurnController.gd" id="2_07b7g"]
[ext_resource type="Material" uid="uid://cgnunqt42nrdv" path="res://Resources/materials/BATALHA.tres" id="3_7cw1g"]
[ext_resource type="Texture2D" uid="uid://dhso7bk8h4wuw" path="res://texture/paleta/Screenshot_30-600x600.png" id="4_c1uej"]
[ext_resource type="Script" uid="uid://dsslpkdcvssk1" path="res://Areais/Batalha/scripts/personagens.gd" id="5_t5kld"]
[ext_resource type="PackedScene" uid="uid://by72qrtpqld7j" path="res://Areais/Batalha/cenas/BattleArenaControl.tscn" id="6_agrdq"]
[ext_resource type="PackedScene" uid="uid://c4i7d4j4sgiva" path="res://Areais/Batalha/cenas/ContainerPlayer.tscn" id="7_mmie3"]
[ext_resource type="Texture2D" uid="uid://m506ayw5c1lv" path="res://texture/PNG/GUI.png" id="8_umbvo"]
[ext_resource type="FontFile" uid="uid://ckj2wo0x2kbuu" path="res://texture/font/kenney_mini_square.ttf" id="9_2aluf"]

[sub_resource type="Animation" id="Animation_nt1gt"]
resource_name = "E_panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Control:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 548), Vector2(0, 402)]
}

[sub_resource type="Animation" id="Animation_h7tth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Control:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 656)]
}

[sub_resource type="Animation" id="Animation_fq6de"]
resource_name = "S_panel"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer/BATTLE_ARENA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Control:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 402), Vector2(0, 548)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleEntityManager2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"atacar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt1gt"]
_data = {
&"E_panel": SubResource("Animation_nt1gt"),
&"RESET": SubResource("Animation_h7tth"),
&"S_panel": SubResource("Animation_fq6de")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_76unj"]
atlas = ExtResource("8_umbvo")
region = Rect2(73, 6, 41, 3)

[node name="Batalha2D" type="Node2D" unique_id=200096273]
script = ExtResource("1_vsann")
metadata/_custom_type_script = "uid://2i0hddkuq4tj"

[node name="BattleTurnController" type="Node" parent="." unique_id=42961639]
script = ExtResource("2_07b7g")
metadata/_custom_type_script = "uid://cfeyaguf3e8fl"

[node name="AnimationPanel" type="AnimationPlayer" parent="." unique_id=239848335]
root_node = NodePath("../BatalhaCanvas")
libraries/ = SubResource("AnimationLibrary_nt1gt")

[node name="BatalhaCanvas" type="CanvasLayer" parent="." unique_id=743992980]
layer = 0
metadata/_edit_vertical_guides_ = [256.0]

[node name="FundoRect" type="TextureRect" parent="BatalhaCanvas" unique_id=1558794307]
material = ExtResource("3_7cw1g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_c1uej")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BatalhaCanvas" unique_id=295808957]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="BatalhaCanvas/VBoxContainer" unique_id=1502310056]
custom_minimum_size = Vector2(0, 656)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/VBoxContainer" unique_id=2093770111]
z_index = 5
custom_minimum_size = Vector2(0, 123)
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/VBoxContainer/MarginContainer" unique_id=1579553549]
z_index = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="ContainerPlayer1" parent="BatalhaCanvas/VBoxContainer/MarginContainer/HBoxContainer" unique_id=741061734 instance=ExtResource("7_mmie3")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(316, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="ContainerPlayer2" parent="BatalhaCanvas/VBoxContainer/MarginContainer/HBoxContainer" unique_id=387080630 instance=ExtResource("7_mmie3")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(316, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="ContainerPlayer3" parent="BatalhaCanvas/VBoxContainer/MarginContainer/HBoxContainer" unique_id=1251120666 instance=ExtResource("7_mmie3")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(316, 0)
layout_mode = 2
size_flags_horizontal = 1

[node name="Label" type="Label" parent="BatalhaCanvas/VBoxContainer" unique_id=1746571955]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.26666668, 1)
theme_override_colors/font_shadow_color = Color(0.64705884, 0.21568628, 0.2627451, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("9_2aluf")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleEntityManager2D" type="HBoxContainer" parent="BatalhaCanvas" unique_id=1008982119]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_t5kld")
metadata/_custom_type_script = "uid://dsslpkdcvssk1"

[node name="Control" type="Control" parent="BatalhaCanvas/BattleEntityManager2D" unique_id=15456822]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BatalhaCanvas/BattleEntityManager2D" unique_id=627489749]
custom_minimum_size = Vector2(952, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ControlComeço" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=1305925742]
custom_minimum_size = Vector2(124, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlComeço" unique_id=464829925]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 540.0
offset_right = -93.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, -4)
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 7

[node name="PointsNinePatchRect" type="NinePatchRect" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlComeço/MarginContainer" unique_id=1659571584]
z_index = 1
layout_mode = 2
texture = ExtResource("8_umbvo")
region_rect = Rect2(135, 20, 52, 7)
patch_margin_left = 2
patch_margin_top = 3
patch_margin_right = 5
patch_margin_bottom = 5

[node name="PointsMarginContainer" type="MarginContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlComeço/MarginContainer/PointsNinePatchRect" unique_id=900974872]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PointsProgressBar" type="TextureProgressBar" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlComeço/MarginContainer/PointsNinePatchRect/PointsMarginContainer" unique_id=155928387]
unique_name_in_owner = true
layout_mode = 2
fill_mode = 2
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_right = 3
stretch_margin_bottom = 2
texture_progress = SubResource("AtlasTexture_76unj")

[node name="Control" type="VBoxContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=1894828872]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control" unique_id=917483475]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="NewPlayer2" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control" unique_id=412545668]
unique_name_in_owner = true
layout_mode = 2

[node name="Control4" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control" unique_id=92851184]
layout_mode = 2
size_flags_vertical = 3

[node name="NewPlayer3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control" unique_id=2120649476]
unique_name_in_owner = true
layout_mode = 2

[node name="Control3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control" unique_id=605394460]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="ControlComeçoMeio" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=1780812107]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="player_1" type="VBoxContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=1162826490]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/player_1" unique_id=912307638]
layout_mode = 2
size_flags_vertical = 3

[node name="NewPlayer1" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/player_1" unique_id=1766790628]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/player_1" unique_id=1062532712]
custom_minimum_size = Vector2(0, 316)
layout_mode = 2

[node name="ControlMeio" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=535691387]
custom_minimum_size = Vector2(448, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlMeio" unique_id=1671495466]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 114
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 138

[node name="BATTLE_ARENA" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/ControlMeio/MarginContainer" unique_id=2094739696 instance=ExtResource("6_agrdq")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="inimigo_1" type="VBoxContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=589473495]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/inimigo_1" unique_id=1056094645]
layout_mode = 2
size_flags_vertical = 3

[node name="NewInimigo1" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/inimigo_1" unique_id=1413866460]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/inimigo_1" unique_id=1695268100]
custom_minimum_size = Vector2(0, 316)
layout_mode = 2

[node name="ControlMeioFim" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=859290680]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Control4" type="VBoxContainer" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=1116574203]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control2" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control4" unique_id=844351772]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="NewInimigo2" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control4" unique_id=1077823775]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control4" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control4" unique_id=1904308569]
layout_mode = 2
size_flags_vertical = 3

[node name="NewInimigo3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control4" unique_id=2129420479]
unique_name_in_owner = true
layout_mode = 2

[node name="Control3" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer/Control4" unique_id=638336248]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="Control9Fim" type="Control" parent="BatalhaCanvas/BattleEntityManager2D/HBoxContainer" unique_id=428003763]
custom_minimum_size = Vector2(124, 0)
layout_mode = 2

[node name="Control2" type="Control" parent="BatalhaCanvas/BattleEntityManager2D" unique_id=1260362967]
layout_mode = 2
size_flags_horizontal = 3
